// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add replyMarkup to the last supported message 1`] = `
Array [
  Object {
    "node": <Photo
      url="http://sociably.io/foo.jpg"
    />,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "params": Object {
        "caption": undefined,
        "disable_notification": true,
        "parse_mode": "HTML",
        "photo": "http://sociably.io/foo.jpg",
        "reply_markup": Object {
          "force_reply": true,
          "selective": undefined,
        },
        "reply_to_message_id": undefined,
      },
      "uploadFiles": undefined,
    },
  },
  Object {
    "node": <ChatAction
      action="upload_photo"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "method": "sendChatAction",
      "params": Object {
        "action": "upload_photo",
      },
    },
  },
]
`;

exports[`add replyMarkup to the last supported message 3`] = `
Array [
  Object {
    "node": <Expression
      disableNotification={true}
      replyMarkup={<ForceReply />}
    >
      foo
      <Photo
        replyMarkup={<ForceReply />}
        url="http://sociably.io/foo.jpg"
      />
    </Expression>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "method": "sendMessage",
      "params": Object {
        "disable_notification": true,
        "parse_mode": "HTML",
        "reply_markup": Object {
          "force_reply": true,
          "selective": undefined,
        },
        "text": "foo",
      },
    },
  },
  Object {
    "node": <Photo
      replyMarkup={<ForceReply />}
      url="http://sociably.io/foo.jpg"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "params": Object {
        "caption": undefined,
        "disable_notification": true,
        "parse_mode": "HTML",
        "photo": "http://sociably.io/foo.jpg",
        "reply_markup": Object {
          "force_reply": true,
          "selective": undefined,
        },
        "reply_to_message_id": undefined,
      },
      "uploadFiles": undefined,
    },
  },
]
`;

exports[`hoist text value into message object 1`] = `undefined`;

exports[`respect the original disableNotification setting set on the messgage 1`] = `
Array [
  Object {
    "node": <Photo
      url="http://sociably.io/bar.jpg"
    />,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "params": Object {
        "caption": undefined,
        "disable_notification": true,
        "parse_mode": "HTML",
        "photo": "http://sociably.io/bar.jpg",
        "reply_markup": undefined,
        "reply_to_message_id": undefined,
      },
      "uploadFiles": undefined,
    },
  },
  Object {
    "node": <Photo
      disableNotification={false}
      url="http://sociably.io/baz.jpg"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "method": "sendPhoto",
      "params": Object {
        "caption": undefined,
        "disable_notification": false,
        "parse_mode": "HTML",
        "photo": "http://sociably.io/baz.jpg",
        "reply_markup": undefined,
        "reply_to_message_id": undefined,
      },
      "uploadFiles": undefined,
    },
  },
]
`;

exports[`set disableNotification in message params 1`] = `undefined`;
